--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -8,10 +8,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Validate JSON schemas
         run: |
-          npm i -g ajv-cli@5
-          ajv validate -s contracts/semantics/node.schema.json -d '{}' || true
-          ajv validate -s contracts/semantics/edge.schema.json -d '{}' || true
-          ajv validate -s contracts/semantics/report.schema.json -d '{}' || true
+          npm i -g ajv-cli@5 ajv-formats
+          ajv validate --extend=ajv-formats -s contracts/semantics/node.schema.json -d '{}' || true
+          ajv validate --extend=ajv-formats -s contracts/semantics/edge.schema.json -d '{}' || true
+          ajv validate --extend=ajv-formats -s contracts/semantics/report.schema.json -d '{}' || true
   docs-style:
     runs-on: ubuntu-latest
     steps:
