Harden contracts schema validation

--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -8,10 +8,22 @@ jobs:
       - uses: actions/checkout@v4
       - name: Validate JSON schemas
         run: |
-          npm i -g ajv-cli@5 ajv-formats
-          ajv validate --extend=ajv-formats -s contracts/semantics/node.schema.json -d '{}' || true
-          ajv validate --extend=ajv-formats -s contracts/semantics/edge.schema.json -d '{}' || true
-          ajv validate --extend=ajv-formats -s contracts/semantics/report.schema.json -d '{}' || true
+          set -euo pipefail
+          npm install -g ajv-cli@5 ajv-formats@^3
+          for schema in node edge report; do
+            ajv validate --extend=ajv-formats \
+              -s contracts/semantics/${schema}.schema.json \
+              -d @contracts/semantics/examples/${schema}-valid.json
+          done
+
+          for schema in node edge report; do
+            if ajv validate --extend=ajv-formats \
+              -s contracts/semantics/${schema}.schema.json \
+              -d @contracts/semantics/examples/${schema}-invalid.json; then
+              echo "Expected ${schema}-invalid.json to fail validation" >&2
+              exit 1
+            fi
+          done
   docs-style:
     runs-on: ubuntu-latest
     steps:
