--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,10 @@ jobs:
       - uses: actions/checkout@v4
       # Maintained Toolchain-Aktion (Actions-RS ist de facto unmaintained)
       - name: Setup Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: stable
-          components: clippy,rustfmt
+          components: clippy rustfmt
       - name: Rust cache
         uses: swatinem/rust-cache@v2
       - name: Cargo fmt
