--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           tool: cargo-audit
       - name: Security audit
-        uses: ashley-taylor/RetryStep@b7e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2
+        uses: nick-fields/retry@v3
         with:
           timeout_minutes: 10
           max_attempts: 4
