--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,23 @@ on:
     branches: [ "main" ]
   pull_request:
   workflow_dispatch:
+    inputs:
+      toolchain:
+        description: "Rust toolchain channel (for example, stable or nightly)"
+        required: false
+        default: stable
+  workflow_call:
+    inputs:
+      toolchain:
+        description: "Rust toolchain channel (for example, stable or nightly)"
+        required: false
+        type: string
+        default: stable
   schedule:
     - cron: "17 4 * * 1"   # Mondays 04:17 UTC: weekly audit/smoke
+
+env:
+  DEFAULT_RUST_TOOLCHAIN: stable
 
 jobs:
   rust:
@@ -18,7 +33,7 @@ jobs:
     env:
       CARGO_TERM_COLOR: always
       RUST_BACKTRACE: 1
-      RUST_TOOLCHAIN: stable
+      RUST_TOOLCHAIN: ${{ inputs.toolchain || env.DEFAULT_RUST_TOOLCHAIN }}
     steps:
       - uses: actions/checkout@v4
 
