--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,20 @@ dependencies = [
     "pyarrow",
     "pyyaml",
 ]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=7.0",
+    "pytest-cov>=4.1",
+    "coverage>=7.5",
+    "hypothesis>=6.100",
+]
+
+[tool.pytest.ini_options]
+addopts = "-q"
+markers = [
+    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
+]
+
+[tool.coverage.run]
+branch = true
