--- a/crates/indexd/Cargo.toml
+++ b/crates/indexd/Cargo.toml
@@ -23,4 +23,5 @@ path = "../embeddings"
 [dev-dependencies]
 tower = "0.5"
 tempfile = "3"
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 
