--- a/crates/indexd/Cargo.toml
+++ b/crates/indexd/Cargo.toml
@@ -24,4 +24,5 @@ path = "../embeddings"
 tower = "0.5"
 tempfile = "3"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+async-trait = "0.1"
 
