Update chronik references

--- a/heimgewebe-.ai-context.yml-sammlung/chronik.ai-context.yml
+++ b/heimgewebe-.ai-context.yml-sammlung/chronik.ai-context.yml
@@ -2,7 +2,7 @@ ai_context_version: 1.0
 
 project:
   name: chronik
-  summary: Event ingest, persistence, and audit store (formerly leitstand).
+  summary: Event ingest, persistence, and audit store for Heimgewebe services.
   role: event_ingest_persistence
   primary_language: rust
   visibility: internal
